--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,12 @@ UpgradeLog*.htm
 
 # Microsoft Fakes
 FakesAssemblies/
+
+## MonoDevelop ignore rules
+#User Specific
+*.userprefs
+*.usertasks
+#Mono Project Files
+*.pidb
+*.resources
+test-results/
