Delay between requests only for consecutive requests to the same server
- move delay configuration to app.config
- move separator character definition to app.config
- postpone requests to host which was recently accessed - run other
tests in the meanwhile

--- a/KolZchutLinksVerification/App.config
+++ b/KolZchutLinksVerification/App.config
@@ -7,5 +7,7 @@
   </system.net>
   <appSettings>
     <add key="AllowAutoRedirect" value="false"/>
+		<add key="SecondsBetweenChecksPerHost" value="10"/>
+		<add key="SeperatorCharacter" value=","/>
   </appSettings>
 </configuration>
